# sdl-template

./: .gitignore  CMakeLists.txt  README.md
scripts/: build-dependencies
src/: CMakeLists.txt  main.cpp
